2002-06-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (file-set-position): Use seek instead of fseek.

2002-05-09  Marius Vollmer  <mvo@zagadka.ping.de>

	* format.scm (format:out-inf-nan): New.
	(format:out-fixed, format:out-expon, format:out-general): Use it
	to print infs and nans.

	* boot-9.scm (unsetenv): New, for completeness.

2002-05-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* format.scm (format:fn-max): Increase to 400 so ~f and ~g can
	print long real numbers with large positive and negative
	exponents.

2002-05-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* syncase.scm: Use (ice-9 threads) so that with-mutex is defined.

2002-04-30  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* gap-buffer.scm: New file.

	* Makefile.am (ice9_sources): Add gap-buffer.scm.

2002-03-12  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm: fix bad let.
	(gensym): fix failure on non-threaded

2002-03-05  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* ftw.scm: New file.

	* Makefile.am (ice9_sources): Add ftw.scm.

2002-02-26  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Update path to pre-inst-guile automake frag.

	* boot-9.scm: Comment grammar fixes; nfc.
	Thanks to Christopher Cramer.

2002-02-24  Rob Browning  <rlb@defaultvalue.org>

	* syncase.scm (gensym): redefine locally so we can control it's
	properties.  This is in preparation for changing the future public
	gensym to produce unreadable symbols.

	* psyntax.pp: updated to reflect new syncase.scm.

2002-02-07  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* regex.scm: Add commentary; nfc.

2002-02-05  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am: Include $(top_srcdir)/pre-inst-guile.am.

	(psyntax.pp): Use $(preinstguile).

2002-01-14  Marius Vollmer  <mvo@zagadka.ping.de>

	* psyntax.ss (datum->syntax-object): Removed assertion in
	datum->syntax-object that checked if the first argument, a
	syntax-object, is an identifier.  This was a unconvenient and