@@ -1,3 +1,9 @@
+2002-06-01  Gary Houston  <ghouston@arglist.com>
+
+	* boot-9.scm (file-set-position): Make third argument optional,
+	for SCM compatibility.
+	(file-position): simplify definition.
+
 2002-06-01  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* boot-9.scm (file-set-position): Use seek instead of fseek.
